--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html {
 }
 
 body {
+    background-color: #EFEFEE;
     font-family: "Nanum Gothic", sans-serif;
     font-size: 20px;
     font-weight: 400;
@@ -168,6 +169,17 @@ body {
     text-transform: uppercase;
 }
 
+.summary-link {
+    text-decoration: none;
+    color: rgb(172, 118, 17);
+    transition: color 0.5s;
+}
+
+a:hover {
+    color: orange;
+    transition: color 0.5s;
+}
+
 .pre {
     margin: 0;
     padding: 0;
@@ -191,11 +203,6 @@ body {
     color: #fff;
 }
 
-.github-link:hover {
-    color: orange;
-    transition: color 0.5s;
-}
-
 .rss {
     color: transparent;
     width: 121px;
@@ -203,4 +210,8 @@ body {
     background-image: url("img/rss.svg");
     background-size: contain;
     background-repeat: no-repeat;
+}
+
+.rss:hover {
+    color: transparent;
 }
